objects/Cross_Sell_Recommendations__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Recommended_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>RequiredItem</fullName>
                </value>
                <value>
                    <fullName>CrossSell</fullName>
                </value>
                <value>
                    <fullName>UpSell</fullName>
                </value>
                <value>
                    <fullName>Complementary</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommended_Product_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product Parent</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cross-Sell Products Recommendations</relationshipLabel>
        <relationshipName>ProductsRecommandation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recommended Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Recommended as Cross-Sell For</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_ID_value__c</fullName>
        <label>unique ID value</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cross-Sell Recommendation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Recommended_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Recommendation-{0000}</displayFormat>
        <label>Cross-Sell Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross-SellRecommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>impossible_recommendation_on_itself</fullName>
        <active>true</active>
        <errorConditionFormula>Recommended_Product__c  =  Recommended_Product_Parent__c</errorConditionFormula>
        <errorMessage>Cannot have the product as part of its own recommendation</errorMessage>
    </validationRules>
</CustomObject>